# sc-telemetry-hub

./: .gitignore  LICENSE  README.md
daemon/: README.md  pyproject.toml  setup.py
daemon/src/: __init__.py  cli.py  impact_detector.py  normalizer.py  parser.py  server.py
docs/: ARCHITECTURE.md  NEXT_STEPS.md  PROJECT_PLAN.md
examples/: python_client.py
web/: README.md  index.html  package.json  tsconfig.json
web/electron/: main.cjs
web/src/: App.tsx  index.css
web/src/components/: DaemonStatus.tsx  GForceGraph.tsx  LogPanel.tsx  TelemetryDisplay.tsx
web/src/components/layout/: AppLayout.tsx  Navigation.tsx  Sidebar.tsx
web/src/context/: TelemetryContext.tsx
web/src/pages/: LiveTelemetryPage.tsx
web/src/types/: index.ts
windows/: .env.bat.example  README.md  SETUP.md  check-setup.bat  install-deps.bat  start-all.bat  start-daemon.bat  start-ui.bat
windows/setup/: check-node.bat  check-python-packages.bat  check-python.bat  check-web-dependencies.bat  check-yarn.bat  resolve-python.bat
